# Flask-Migrate

./: .gitignore  .readthedocs.yaml  .travis.yml  CHANGELOG.md  CHANGES.md  MANIFEST.in  README.md  __version__  flask_migrate.py  pyproject.toml  setup.cfg  setup.py  tox.ini
.github/ISSUE_TEMPLATE/: bug_report.md  config.yml  feature_request.md
.github/workflows/: tests.yml
docs/: Makefile  conf.py  index.rst  make.bat
flask_migrate/: __init__.py  cli.py
flask_migrate/templates/flask/: env.py  script.py.mako
flask_migrate/templates/flask-multidb/: alembic.ini.mako  env.py
old-docs/_static/: index.html
src/flask_migrate/: __init__.py  cli.py
src/flask_migrate/templates/aioflask/: README  env.py
src/flask_migrate/templates/aioflask-multidb/: README  env.py
src/flask_migrate/templates/flask/: env.py
src/flask_migrate/templates/flask-multidb/: README  env.py
tests/: app.py  app2.py  app_comp.py  app_compare_type1.py  app_compare_type2.py  app_custom_directory.py  app_custom_directory_path.py  app_multidb.py  app_multidb_2.py  app_with_seed.py  test_custom_template.py  test_migrate.py  test_migrate_custom_directory.py  test_migrate_flaskcli.py  test_multidb_migrate.py  test_multidb_migrate_flaskcli.py
tests/custom_template/: README  alembic.ini.mako  env.py  script.py.mako
tests/multidb/: alembic.ini  app_multidb.py  env.py.copy  test_migrate.py
