[metadata]
name = Flask-Migrate
version = 4.0.3
author = Miguel Grinberg
author_email = miguel.grinberg@gmail.com
license = MIT
description = SQLAlchemy database migrations for Flask applications using Alembic.
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/miguelgrinberg/flask-migrate
project_urls =
    Bug Tracker = https://github.com/miguelgrinberg/flask-migrate/issues
classifiers =
    Environment :: Web Environment
    Intended Audience :: Developers
    Programming Language :: Python :: 3
    License :: OSI Approved :: MIT License
    Operating System :: OS Independent

[options]
zip_safe = False
include_package_data = True
package_dir =
    = src
packages = find_namespace:
python_requires = >=3.6
install_requires =
    Flask >= 0.9
    Flask-SQLAlchemy >= 1.0
    alembic >= 1.9.0

[options.packages.find]
where = src
